virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
    - product
  http:
    - route:
        - destination:
            host: product
            subset: v1
